# translators-labs

./: .gitignore
initial files/works_v5/test_automation/: test.c  x.sh  x3.test.in
lab1/works_v5/test_automation/: test  test.c  x.sh  x1.test.out  (+5 more)
lab3/: CMakeLists.txt  task.md
lab3/c/parser/: memStruct.h  parse_0.c  parser.c  parser.h  x.sh
lab3/c/parser/tests/dw/: dup_nested.test.in  dup_nested2.test.in  dup_nested2.test.out  dup_nested3.test.in  dup_nested4.test.in  dup_nested4.test.out  dup_nested_combined.test.in  dup_nested_combined.test.out  dup_parents.test.in  dup_parents.test.out  dup_parents2.test.in  dup_parents2.test.out  dup_quest.test.in  dup_quest.test.out  dup_quest_parents.test.in  dup_quest_parents.test.out  dup_quest_parents2.test.in  dup_quest_parents2.test.out  dup_with_simple.test.in  dup_with_simple2.test.in  dup_with_simple3.test.in  dup_with_simple4.test.in  dup_with_simple4.test.out  empty.test.out  invalid_dup.test.in  invalid_dup.test.out  invalid_dw2.test.in  invalid_dw2.test.out  invalid_unexpected_dup.test.in  invalid_unexpected_dup.test.out  simple.test.in  simple.test.out  simple_args.test.in  simple_args.test.out
lab3/c/parser/tests/num_list/: another_token.test.out  empty.test.out  x1.test.out  x2.test.out  x3.test.in  x3.test.out
lab3/c/scanner/: scanner.c  scanner.h
lab4/: task.md
lab4/task1/: lexer  lexer.l  scanner.c  task.md  tests  x.sh
lab4/task2/: sorted_words.sh  task.md  words  words.l  x.sh
lab5/task1/: a.out  build.sh  dw.l  dw.y  lex.yy.c  memStruct.c  tests  x.sh  y.output  y.tab.c  y.tab.h  zz.c
(+118 files in other folders)
